<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsAct">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_content_padding">

            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_layout_white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_back" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_app_logo"
                    android:layout_width="@dimen/img_width"
                    android:layout_height="@dimen/img_height"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:src="@drawable/notebook_icon" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">





                    <TextView
                        android:id="@+id/txt_rate_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/bg_gradient_primary_blue"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:text="@string/rate_us"
                        android:textSize="@dimen/text_semi_normal"
                        tools:ignore="RelativeOverlap" />


                    <TextView
                        android:id="@+id/txt_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/bg_btn_plus_blue"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:paddingEnd="13dp"
                        android:paddingStart="10dp"
                        android:text="@string/share"
                        android:textSize="@dimen/text_semi_normal"
                        tools:ignore="RelativeOverlap" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_others"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_margin="15dp"
                        android:background="@color/blueSecondary" />


                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/layout_powered_by"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_powered_by"
                        android:layout_width="@dimen/img_width"
                        android:layout_height="@dimen/img_height"
                        android:layout_below="@+id/txt_powered_by_title"
                        android:layout_marginEnd="5dp"
                        android:padding="5dp"
                        android:src="@drawable/dev" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_powered_by_title"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/img_powered_by"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/txt_powered_by_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/name"
                            android:textSize="@dimen/text_semi_large"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_powered_by_about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="7"
                            android:text="@string/tugas"
                            android:textSize="@dimen/text_small" />

                        <TextView
                            android:id="@+id/txt_powered_by_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:autoLink="web"
                            android:ellipsize="end"
                            android:linksClickable="true"
                            android:maxLines="2"
                            android:text="@string/link"
                            android:textSize="@dimen/text_small" />


                    </LinearLayout>


                    <TextView
                        android:id="@+id/txt_powered_by_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view_line_1"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="5dp"
                        android:text="Powered By"
                        android:textSize="@dimen/text_semi_normal" />


                    <View
                        android:id="@+id/view_line_1"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_margin="15dp"
                        android:background="@color/cardview_light_background" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/txt_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txt_app_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/about_this_app"
                    android:textSize="@dimen/text_semi_normal" />


                <TextView
                    android:id="@+id/txt_app_version_and_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:maxLines="1"
                    android:text="@string/hint_enter_note"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>